<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jason.barterworld.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:id="@+id/btn_barter_search"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:onClick="onSearch"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:src="@mipmap/ic_search_10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_goods"
        app:layout_constraintLeft_toRightOf="@+id/txt_barter"
        app:layout_constraintRight_toLeftOf="@+id/guideline_end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/txt_barter"
        android:layout_width="264dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:foregroundTint="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
        android:hint="Enter Barter Name here ... "
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:textColorLink="@color/cardview_dark_background"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/guideline_start"
        app:layout_constraintRight_toLeftOf="@+id/btn_barter_search"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_goods"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_orange_dark"
        android:text="Goods"
        app:layout_constraintLeft_toRightOf="@+id/guideline_start"
        app:layout_constraintRight_toLeftOf="@+id/guideline_middle"
        app:layout_constraintRight_toRightOf="@+id/guideline_middle"
        app:layout_constraintTop_toBottomOf="@+id/txt_barter"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btn_services"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_green_light"
        android:text="Services"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_middle"
        app:layout_constraintLeft_toRightOf="@+id/guideline_middle"
        app:layout_constraintRight_toLeftOf="@+id/guideline_end"
        app:layout_constraintRight_toRightOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/txt_barter"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/post_recycler_list"
        android:layout_marginStart="3dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btn_services"
        android:layout_marginLeft="3dp">

    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/post_recycler_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_services"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0"></android.support.v7.widget.RecyclerView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

</android.support.constraint.ConstraintLayout>